Updated code with testing